# tools

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .semgrepignore  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  sitecustomize.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  end2end_tests.yaml  pre-commit.yaml  publish_image.yaml  publish_images.yaml  semgrep.yaml  unittests.yaml
client/: package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  detect_yolo_version.js  index.js  setupProxy.js  store.js
nginx/: Dockerfile  nginx.conf  nginx.local.conf
static/: index.html
static/styles/: main.css
templates/: index.html
tests/: README.md  conftest.py  constants.py  e2e_shards.py  gui_tests.py  helper_functions.py  nnarchive_output_checks.py  test_cli_conversion.py  test_conversion.py  test_end2end.py  test_telemetry.py  test_unittests.py  test_yolox_exporter.py  unittests.py
tools/: conversion_registry.py  main.py
tools/modules/: __init__.py  backbones.py  detect_head.py  exporter.py  heads.py  stage2.py
tools/utils/: __init__.py  config.py  constants.py  filesystem_utils.py  in_channels.py  (+2 more)
utils/: exceptions.py
yolo/: YoloV5_export_playground.ipynb  __init__.py  backbones.py  detect_head.py  export.py  export_yolop.py  export_yolov10.py  export_yolov5.py  export_yolov5lite.py  export_yolov5seg.py  export_yolov6.py  export_yolov6_r1.py  export_yolov6_r2.py  export_yolov7.py  export_yolov8.py  exporter.py  loss.py  test_seg_export.py  yolov10_onnx_inference.ipynb
yolov6r1/: Dockerfile  main.py  requirements.txt
yolov6r3/: Dockerfile  main.py  requirements.txt
yolov7/: Dockerfile  main.py  requirements.txt
(+42 files in other folders)
